# Nguy-n_S-_H-_LV1_project_02

./: .gitignore  PYCHARM_RUN_GUIDE.md  README.md  main.py  merge_json.py  pyproject.toml  requirements.txt  run.py  setup.py  validate_input.py
src/: utils.py
src/tiki_scraper/: cli.py  crawler.py  database.py  etl.py  pipeline.py  utils.py
src/tiki_scraper/config/: settings.py
src/tiki_scraper/etl/: extract.py  load.py  transform.py
src/tiki_scraper/pipelines/: crawl_pipeline.py
src/tiki_scraper/utils/: discord.py  logger.py
